# RedisDesktopManager

./: .cc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  BACKERS.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  RDM.sln  README.md  Vagrantfile  appveyor.yml  build_osxbundle.sh  build_package.sh  build_wininstaller.bat  fix_debi6.sh  gen_dashboard.sh  gen_topic.sh  groups  install_debi7.sh  install_ubuntu.sh  mkdocs.yml  project.config  snapcraft.yaml  sonar-project.properties
.github/: ISSUE_TEMPLATE.md
crashreporter/: CrashReporter.cpp  CrashReporter.h  CrashReporter.ui  crashreporter.pro  crashreporter.vcxproj  crashreporter.vcxproj.filters  main.cpp
docs/: app-store.md  build.md  bulk-operations.md  development.md  extension-server.md  faq.md  features.md  index.md  install.md  known-issues.md  known-issues_cn.md  lg-keyspaces.md  native-formatters.md  notices.md  quick-start.md  requirements.txt  server_spec.yaml
redis-desktop-manager/: Info.plist  ValueTabView.h  abstracttransporter.cpp  abstracttransporter.h  configure  connections.xml  rdm.plist  resource.h  version.h  (+5 more)
src/modules/extension-server/client/: CMakeLists.txt  OAIDataFormatter.cpp  OAIDataFormatter.h  OAIDecodePayload.cpp  OAIDecodePayload.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEncodePayload.cpp  OAIEncodePayload.h  OAIEnum.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIInline_response_400.cpp  OAIInline_response_400.h  OAIOauth.cpp  OAIOauth.h  OAIObject.h  OAIServerConfiguration.h  OAIServerVariable.h  client.pri
(+824 files in other folders)
